@@ -18,7 +18,6 @@ package com.societegenerale.failover.core.report;
 
 import ch.qos.logback.classic.spi.ILoggingEvent;
 import ch.qos.logback.core.Appender;
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -51,7 +50,7 @@ class EventTest {
 
     @BeforeEach
     void setUp() {
-        ch.qos.logback.classic.Logger logger = (ch.qos.logback.classic.Logger) LoggerFactory.getLogger(Logger.ROOT_LOGGER_NAME);
+        var logger = (ch.qos.logback.classic.Logger) LoggerFactory.getLogger(Logger.ROOT_LOGGER_NAME);
         logger.addAppender(appender);
         MDC.clear();
     }
@@ -110,7 +109,7 @@ class EventTest {
         event.publish();
 
         //then
-        assertThat(MDC.getCopyOfContextMap()).containsAllEntriesOf(ImmutableMap.of(
+        assertThat(MDC.getCopyOfContextMap()).containsAllEntriesOf(Map.of(
                 "existingKey", "existingValue",
                 "existingKey2", "existingValue2"));
     }
